--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
+  "homepage": "/RoadmapCosmico",
   "scripts": {
     "predeploy": "yarn run build",
     "deploy": "gh-pages -d build",
