--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,14 +11,12 @@ jobs:
         node-version: [12.x]
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
     - name: Install Packages
-      run: npm install
+      uses: borales/actions-yarn@v2.3.0
+        with:
+          cmd: install # will run `yarn install` command
     - name: Build page
-      run: npm run build
+      run: run build
     - name: Deploy to gh-pages
       uses: peaceiris/actions-gh-pages@v3
       with:
