--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,9 +13,9 @@ jobs:
     - uses: actions/checkout@v2
     - uses: borales/actions-yarn@v2.3.0
     - name: Install Packages
-      run: install # will run `yarn install` command
+      run: yarn install # will run `yarn install` command
     - name: Build page
-      run: run build
+      run: yarn run build
     - name: Deploy to gh-pages
       uses: peaceiris/actions-gh-pages@v3
       with:
