--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - name: Install Packages
       run: npm install
+    - name: Update borwser list
+      run: npx browserslist@latest --update-db 
     - name: Build page
       run: npm run build
     - name: Deploy to gh-pages
