--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "downlevelIteration": true,
+    "strictPropertyInitialization": false,
     "lib": [
       "dom",
       "dom.iterable",
